blog-k8s/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-nginx
  labels:
    app: nginx
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: nginx
