blog-k8s/service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-deployment
  labels:
    app: blog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      containers:
        - name: blog-service
          image: ccr.ccs.tencentyun.com/simple-blog/blog-service:v2
          volumeMounts: #指定在容器中挂接路径
          - name: blog-file
            mountPath: /blog/summary
          ports:
            - containerPort: 8888
              hostPort: 8888
      volumns: #  指定所提供的存储卷
      - name: blog-file
        hostPath:
          # 宿主机上的目录
          path: /blog/summary
          # this field is optional
          type: Directory # path指定的目标必需存在
      imagePullSecrets:
        - name: tx-registry

---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  labels:
    app: blog-service
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: blog-service
