blog-k8s/blog-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - yuzhihui.xyz
      secretName: yuzhihui-secret
  rules:
    - host: yuzhihui.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: blog-nginx
              servicePort: 8088
